2014-07-27  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: Minor fixes around ml_vt100_parser_t::yield.

2014-07-26  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/README.ja, man/mlterm.1: Updated.

	* ml_vt100_parser.c: fclose(fp) and free(path) are called before return 0
	  in processing sixel sequence.

2014-07-26  Araki Ken  <arakiken@users.sf.net>

	* x_main_config.c, x_screen.c: --seqfmt/vt_seq_format option is added.

	* ml_vt100_parser.[ch]: ml_set_use_ttyrec_format() enables or disables to log
	  vt100 sequence by ttyrec format.

2014-07-25  Araki Ken  <arakiken@users.sf.net>

	* ml_bidi.c, x_picture.c: ml_get_picture_char() is used.

	* ml_char.[ch]: ml_get_picture_char() is added.

	* x_screen.c: interrupt_vt100_cmd() is added.

	* ml_vt100_parser.[ch]:
	  - interrupt event is added to ml_xterm_event_listener_t.
	  - ml_xterm_event_listener_t::interrupt is called if sixel graphics is drawn
	    by DECINVM.
	  - The amount of reading data from pty once is shrinked if buffered data
	    isn't DCS or OSC.
	  - new_len is added to ml_read_buffer_t, and only newly received data is
	    parsed in restarting to parse DCS or OSC in  parse_vt100_escape_sequence().

2014-07-23  Araki Ken  <arakiken@users.sf.net>

	* ml_drcs.[ch], ml_vt100_parser.[ch]: const is added to some arguments.

2014-07-21  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c:
	  - hex_to_text() is optimized.
	  - define_macro() deletes specified entry if *data is '\0'.

2014-07-21  Araki Ken  <arakiken@users.sf.net>

	* x_picture.c, xlib/x_imagelib.c: ~/.mlterm/macro_*.six is cached.

	* ml_vt100_parser.[ch]:
	  - DECDMAC/DECINVM are supported.
	  - If DECDMAC defines sixel graphics data, store it in ~/.mlterm/macro_*.six and
	    show it by DECINVM.

2014-07-19  Araki Ken  <arakiken@users.sf.net>

	* MLTermPty.c:
	  - "use_auto_detect" and "auto_detect_encodings" are supported.
	  - replaceTextBuffering(0,0,null,null) is called in checkTextLimit().
